@@ -1,3 +1,10 @@
+Fri Feb  6 11:05:29 CET 2009 Christian Anthon <anthon@kiku.dk>
+
+	* analysis.c, backgammon.h, commands.inc, play.c, progress.c: Add a Command
+	"analyse rollout double". Warn if user tryes to use analyse move on a
+	take. Print final result if user interrupts rollouts in the cl
+	interface.
+
 Tue Feb  3 21:43:32 CET 2009 Christian Anthon <anthon@kiku.dk>
 
 	* backgammon.h, play.c: remove quick_roll from non-gtk code
